# book-library

./: .dockerignore  .env-example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  create-env.sh  docker-compose-ci.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: github-action.yaml  lint-test.yaml
alembic/: env.py
alembic/versions/: 3c417b00b0af_initial.py  6716f901fa9c_initial.py  a1549f743b75_initial.py  ca6e70c006bd_initial.py
app/: main.py
app/api/v1/: router.py
app/api/v1/views/: auth.py  author.py  book.py  city.py  genre.py  user.py
app/core/: config.py
app/core/auth/: __init__.py  jwt_auth.py
app/crud/: __init__.py  author.py  base.py  book.py  city.py  genre.py  user.py
app/db/: base.py  session.py
app/dependencies/: __init__.py  auth.py  session.py
app/models/: __init__.py  author.py  book.py  city.py  genre.py  mixins.py  person.py  user.py
app/schemas/: __init__.py  author.py  book.py  city.py  genre.py  user.py
app/tests/: README.md  conftest.py
app/tests/api/v1/: test_auth.py  test_city.py
diagrams/: README.md
diagrams/activity/: activityDiagram.drawio
diagrams/architecture/: LibraryArchitecture.drawio
diagrams/database-entities/: BookLibrary.drawio
diagrams/deployment/: deploymentDiagram.drawio
diagrams/sequence/: sequenceDiagramCityCRUD.drawio  sequenceDiagramGenreCRUD.drawio
diagrams/useCases/: useCases.drawio
